@@ -35,6 +35,7 @@ include(dirname(__FILE__) . "/../include/global.php");
 /* process calling arguments */
 $parms = $_SERVER["argv"];
 array_shift($parms);
+$hostId = NULL;
 
 if (sizeof($parms)) {
 	foreach($parms as $parameter) {
@@ -51,6 +52,9 @@ if (sizeof($parms)) {
 		case "--help":
 			display_help();
 			exit(0);
+		case "--hostId":
+			$hostId = $value;
+			break;
 		default:
 			echo "ERROR: Invalid Argument: ($arg)\n\n";
 			display_help();
@@ -85,18 +89,28 @@ if ($poller_running == "1") {
 /* turn on extended paths from in the database */
 set_config_option("extended_paths", "on");
 
-/* get the host ids and rrd paths from the poller_item table  */
-$rrd_info = db_fetch_assoc("SELECT DISTINCT local_data_id, host_id, rrd_path FROM poller_item");
+/* fetch all DS having wrong path */
+$data_sources = db_fetch_assoc("SELECT
+				local_data_id,
+				host_id,
+				data_source_path,
+				CONCAT('<path_rra>/', host_id, '/', local_data_id, '.rrd') AS new_data_source_path,
+				REPLACE(data_source_path, '<path_rra>', '$base_rra_path') AS rrd_path,
+				REPLACE(CONCAT('<path_rra>/', host_id, '/', local_data_id, '.rrd'), '<path_rra>', '$base_rra_path') AS new_rrd_path
+					FROM data_template_data
+					INNER JOIN data_local ON data_local.id=data_template_data.local_data_id
+					INNER JOIN host ON host.id=data_local.host_id
+				WHERE data_source_path != CONCAT('<path_rra>/', host_id, '/', local_data_id, '.rrd')"
+				 . ($hostId === NULL ? "" : " AND host_id=$hostId"));
 
 /* setup some counters */
 $done_count   = 0;
-$ignore_count = 0;
 $warn_count   = 0;
 
-/* scan all poller_items */
-foreach ($rrd_info as $info) {
+/* scan all data sources */
+foreach ($data_sources as $info) {
 	$new_base_path = "$base_rra_path" . "/" . $info["host_id"];
-	$new_rrd_path  = $new_base_path . "/" . $info["local_data_id"] . ".rrd";
+	$new_rrd_path  = $info["new_rrd_path"];
 	$old_rrd_path  = $info["rrd_path"];
 
 	/* create one subfolder for every host */
@@ -125,21 +139,17 @@ foreach ($rrd_info as $info) {
 	}
 
 	/* copy the file, update the database and remove the old file */
-	if ($old_rrd_path == $new_rrd_path) {
-		$ignore_count++;
-
-		echo "NOTE: File '$old_rrd_path' is Already Structured, Ignoring\n";
-	} elseif (!file_exists($old_rrd_path)) {
+	if (!file_exists($old_rrd_path)) {
 		$warn_count++;
 
 		echo "WARNING: Legacy RRA Path '$old_rrd_path' Does not exist, Skipping\n";
 
 		/* alter database */
 		update_database($info);
-	} elseif (copy($old_rrd_path, $new_rrd_path)) {
+	} elseif (link($old_rrd_path, $new_rrd_path)) {
 		$done_count++;
 
-		echo "NOTE: Copy Complete for File '" . $info["rrd_path"] . "'\n";
+		echo "NOTE: HardLink Complete:'" . $old_rrd_path . "' -> '" . $new_rrd_path . "'\n";
 		if ($config["cacti_server_os"] != "win32") {
 			if (chown($new_rrd_path, $owner_id) && chgrp($new_rrd_path, $group_id)) {
 				echo "NOTE: Permissions set for '$new_rrd_path'\n";
@@ -176,23 +186,21 @@ foreach ($rrd_info as $info) {
 /* finally re-enable the poller */
 enable_poller();
 
-echo "NOTE: Process Complete, '$done_count' Completed, '$warn_count' Skipped, '$ignore_count' Previously Structured\n";
+echo "NOTE: Process Complete, '$done_count' Completed, '$warn_count' Skipped\n";
 
 /* update database */
 function update_database($info) {
-	global $new_rrd_path;
-
-		/* upate table poller_item */
+	/* upate table poller_item */
 	db_execute("UPDATE poller_item
-		SET rrd_path = '$new_rrd_path'
+		SET rrd_path = '" . $info["new_rrd_path"] . "'
 		WHERE local_data_id=" . $info["local_data_id"]);
 
 	/* update table data_template_data */
 	db_execute("UPDATE data_template_data
-		SET data_source_path='<path_rra>/" . $info["host_id"] . "/" . $info["local_data_id"] . ".rrd'
+		SET data_source_path='" . $info["new_data_source_path"] . "'
 		WHERE local_data_id=" . $info["local_data_id"]);
 
-	echo "NOTE: Database Changes Complete for File '" . $info["rrd_path"] . "'\n";
+	echo "NOTE: Database Changes Complete for File '" . $info["new_rrd_path"] . "'\n";
 }
 
 /* turn on the poller */
@@ -206,11 +214,12 @@ function disable_poller() {
 }
 
 function display_help() {
-	echo "Structured RRA Paths Utility, Copyright 2008 - The Cacti Group\n\n";
+	echo "Structured RRA Paths Utility, Copyright 2008-2012 - The Cacti Group\n\n";
 	echo "A simple command line utility that converts a Cacti system from using\n";
 	echo "legacy RRA paths to using structured RRA paths with the following\n";
 	echo "naming convention: <path_rra>/host_id/local_data_id.rrd\n\n";
 	echo "This utility is designed for very large Cacti systems.\n\n";
+	echo "On Linux OS, superuser is required to apply file ownership.\n\n";
 	echo "The utility follows the process below:\n";
 	echo "  1) Disables the Cacti Poller\n";
 	echo "  2) Checks for a Running Poller.\n\n";
@@ -229,7 +238,7 @@ function display_help() {
 	echo "If the utility encounters a problem along the way, it will:\n";
 	echo "  1) Re-enable the poller\n";
 	echo "  2) Exit\n\n";
-	echo "usage: structure_rra_paths.php --proceed [--help | -H | --version | -V]\n\n";
+	echo "usage: structure_rra_paths.php --proceed [--help | -H | --version | -V] [--hostId=<hostId>]\n\n";
 }
 
 ?>
